--- a/shop/templates/statistics.html
+++ b/shop/templates/statistics.html
@@ -283,6 +283,16 @@ input[type=number].hidearrows {
 	left: 0px;
 	top: 25px;
   }
+
+  #signalGenerator {
+	background-image: url({% static 'siggen_edited.png' %});
+	background-size: contain;
+	background-repeat: no-repeat;
+	height: 435px;
+	width: 1080px;
+	position: absolute;
+	padding: 10px;
+  }
   {% comment %} #onButton {
 	background-color: #E1E1E1;
 	color: black;
@@ -656,7 +666,7 @@ Observation & Question
 				<button type="button" style="width:88px; height:55px; flex-wrap: wrap; text-align: center;" id="disconnectButton" onclick="document.getElementById('isConnected').value = false; updateTrainingKit()">Shutdown RF Trainer</button>
 			  </div>
 			  <div style="position:absolute; top:51.5%; left:3.5%; height:180px; width:240px;">
-				<select name="lab" id="lab">
+				<select name="lab" id="lab" style="display:none">
 				  <!-- <option value="L1">L1 T1</option> style="display:none" -->
 					<option value="L5" id="labOption1" selected>L5</option>
 					<option value="900Z-15ZVariableXZMOff" style="display:none" id="labOption2"> L5 RF On 900,-15</option>
@@ -671,7 +681,7 @@ Observation & Question
 				<input type="hidden" value="0" id="previouslab"> <!-- Penguin22 | edited line -->
 				<input type="hidden" value=false id="isOn">
 				<button type="button" style="width:240px; height:38px; flex-wrap: wrap; text-align: center;" id="onButton" onclick="" disabled=true>Frequency Synthesizer Off</button>
-				<select name="year" style="position:absolute; top:12px; left:150px;" id="year" disabled=true>
+				<select name="year" style="position:absolute; top:48px; left:120px;" id="year" disabled=true>
 				  <option value="Freq.Syn-880">880.0</option>
 				  <option value="Freq.Syn-818" selected>818.0</option>
 				  <option value="Freq.Syn-816">816.0</option>
@@ -682,7 +692,11 @@ Observation & Question
 				<input type="hidden" value=false id="mixerIsOn">
 			    <button type="button" style="width:74px; height:54px; flex-wrap: wrap; text-align: center;" id="mixerOnButton" onclick="" disabled=true>Mixer Off</button>
 			  </div>
+			  <div id="date" style="top:66%; left:55%; color:#333333; font-size:14px; position:absolute;"></div>
 			  <script>
+				var today = new Date();
+				var date = today.getDate()+'/'+(today.getMonth()+1)+'/'+today.getFullYear();
+				document.getElementById("date").innerHTML = date;
 				$("#year").change(function() {
 					updateTrainingKit();
 				});
@@ -721,40 +735,54 @@ Observation & Question
 		</div>
 		<div class="flex-item content" id="signalGeneratorTab" style="min-height:600px; min-width:400px;">
 		  <div style="height:600px; width:1200px;">
-			<div style="background-color:#000000; height:200px; width:400px; left:50px; top:50px; position:absolute; padding: 10px;">
-			  <table>
+			<div id="signalGenerator">
+			  <table style="top:50px; left:200px; position:absolute">
 			    <tr>
 			      <td>Frequency: </td>
-			      <td><input type="number" id="signalGeneratorFrequency" value=900 readonly></td>
+				  <td>Amplitude: </td>
 			    </tr>
 			    <tr>
-			      <td>Amplitude: </td>
+				  <td><input type="number" id="signalGeneratorFrequency" value=900 readonly></td>
 			      <td><input type="text" id="signalGeneratorAmplitude" value=-15 readonly></td>
 			    </tr>
 			  </table>
-		    </div>
-		    <button type="button" style="width:76px; height:54px; left:500px; top:50px; position:absolute; flex-wrap: wrap; text-align: center;" id="signalGeneratorFrequencyButton" onclick="">Frequency</button>
-		    <button type="button" style="width:74px; height:54px; left:500px; top:120px; position:absolute; flex-wrap: wrap; text-align: center;" id="signalGeneratorAmplitudeButton" onclick="">Amplitude</button>
-		    <script>
-				document.getElementById("signalGeneratorFrequencyButton").onclick = function() {
-					if (document.getElementById("signalGeneratorFrequency").value == "900") {
-						document.getElementById("signalGeneratorFrequency").value = 868;
-					} else if (document.getElementById("signalGeneratorFrequency").value == "868") {
-						document.getElementById("signalGeneratorFrequency").value = 860;
-					} else {
+			  <select id="signalGeneratorFrequencySelect" style="width:60px; height:25px; left:740px; top:45px; position:absolute;">
+			  	<option value=900>900</option>
+				<option value=868>868</option>
+				<option value=860>860</option>
+			  </select>
+			  <select id="signalGeneratorAmplitudeSelect" style="width:60px; height:25px; left:740px; top:85px; position:absolute;">
+				<option value=-15>-15</option>
+			  </select>
+			  <div style="width:65px; height:25px; left:540px; top:150px; color:black; background-color:cyan; font-size:15px; line-height: 25px; text-align: center; position:absolute;">MOD OFF</div>
+			  <div style="width:65px; height:25px; left:540px; top:180px; color:black; background-color:cyan; font-size:15px; line-height: 25px; text-align: center; position:absolute;" id="RFDisplay">RF ON</div>
+		      <button type="button" style="width:55px; height:30px; left:1010px; top:45px; background-color:green; color:white; position:absolute; flex-wrap: wrap; text-align: center;" id="signalGeneratorPresetButton" onclick="">Preset</button>
+		      <button type="button" style="width:55px; height:35px; left:900px; top:280px; position:absolute; flex-wrap: wrap; text-align: center;" id="signalGeneratorRFButton" onclick="">RF On/Off</button>
+			  <script>
+				$("#signalGeneratorFrequencySelect").change(function(){
+					document.getElementById("signalGeneratorFrequency").value = document.getElementById("signalGeneratorFrequencySelect").value
+				});
+				$("#signalGeneratorAmplitudeSelect").change(function(){
+					document.getElementById("signalGeneratorAmplitude").value = document.getElementById("signalGeneratorAmplitudeSelect").value
+				});
+					document.getElementById("signalGeneratorPresetButton").onclick = function() {
 						document.getElementById("signalGeneratorFrequency").value = 900;
-					}
+						document.getElementById("signalGeneratorFrequencySelect").value = 900;
+						document.getElementById("signalGeneratorAmplitude").value = -15;
 					processOption();
 				};
-				document.getElementById("signalGeneratorAmplitudeButton").onclick = function() {
+				document.getElementById("signalGeneratorRFButton").onclick = function() {
 					if (document.getElementById("signalGeneratorAmplitude").value == "-15") {
 						document.getElementById("signalGeneratorAmplitude").value = "RF Off";
+						document.getElementById("RFDisplay").innerHTML = "RF OFF";
 					} else {
 						document.getElementById("signalGeneratorAmplitude").value = -15;
+						document.getElementById("RFDisplay").innerHTML = "RF ON";
 					}
 					processOption();
 				};
-		    </script>
+		      </script>
+			</div>
 		  </div>
 		</div>
 		<div class="flex-item content startShow" id="spectrumAnalyzerTab" style="min-height:600px; min-width:400px;">
@@ -1802,7 +1830,7 @@ function updateTrace() {
 				if (selected.indexOf(6) != -1) selected.splice(selected.indexOf(6), 1)
 				if (selected.indexOf(7) != -1) selected.splice(selected.indexOf(7), 1)
 			}
-			document.getElementById("lab").selectedIndex = selected[0] - 1
+			document.getElementById("lab").selectedIndex = selected[0]-1
 			console.log(selected[0]);
 			updateTrainingKit();
 		}
